Perkin-UAT/force-app/main/default/objects/B2B_Product_Related_Resources__c/B2B_Product_Related_Resources__c.object-meta.xml
<CustomObject>
    <label>B2B Product Related Resources</label>
    <nameField>
        <displayFormat>BPRR-{0000000}</displayFormat>
        <label>B2B Product Related Resources Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>B2B Product Related Resources</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>