Perkin-UAT/force-app/main/default/objects/B2B_Product_Related_Resources__c/fields/B2B_Product_Resources__c.field-meta.xml
<CustomField>
    <fullName>B2B_Product_Resources__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>B2B Product Resources</label>
    <referenceTo>B2B_Product_Resources__c</referenceTo>
    <relationshipLabel>B2B Product Related Resources</relationshipLabel>
    <relationshipName>B2B_Product_Related_Resources</relationshipName>
    <type>Lookup</type>
</CustomField>