Perkin-UAT/force-app/main/default/objects/B2B_Product_Related_Resources__c/fields/B2B_Sequence__c.field-meta.xml
<CustomField>
    <fullName>B2B_Sequence__c</fullName>
    <label>B2B Sequence</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>